<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/include"
        layout="@layout/top_nav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="192dp"
        android:layout_height="192dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        app:srcCompat="@drawable/logo"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/register_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="24dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        android:id="@+id/name_fld"
        style="@style/Widget.App.EditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints="@string/prompt_email"
        android:drawableStart="@drawable/ic_outline_account_24"
        android:hint="@string/prompt_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_text" />

    <EditText
        android:id="@+id/email_fld"
        style="@style/Widget.App.EditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints="@string/prompt_email"
        android:drawableStart="@drawable/ic_mail_24"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_fld" />

    <EditText
        android:id="@+id/password_fld"
        style="@style/Widget.App.EditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints="@string/prompt_email"
        android:drawableStart="@drawable/ic_vpn_key_24"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_fld" />

    <Button
        android:id="@+id/singUpBtn"
        style="@style/Widget.App.Button.BorderContained"
        android:layout_gravity="start"
        android:layout_marginTop="24dp"
        android:text="@string/action_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_fld" />

    <TextView
        style="@style/Widget.App.SmallText"
        android:id="@+id/lost_password"
        android:layout_marginTop="24dp"
        android:text="@string/accept_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/singUpBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>