<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.pets.PetsFragment">

    <Button
        android:id="@+id/lostPetsButton"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/button_selector"
        android:fontFamily="@font/roboto_black"
        android:text="@string/perdido"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#BE7938"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/adoptionPetsButton"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_selector"
        android:fontFamily="@font/roboto_black"
        android:text="@string/adopcion"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#BE7938"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/filterPetsButton"
        android:layout_width="357dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="25dp"
        android:background="#635434"
        android:fontFamily="@font/roboto_black"
        android:text="Filtros"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/petsPublicationRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filterPetsButton"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/MascotasTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/pets"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>